Disable drag and drop

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body ondragstart="return false;" ondrop="return false;">
     <button>New grid</button>
     <script src="script.js"></script>
 </body>
